--- a/style.css
+++ b/style.css
@@ -19,8 +19,9 @@
 body{
     background-color: #1F2937;
 }
+
 header{
-    color:#FFFFFF;
+    color:white;
     display:flex;
     justify-content:space-between;
     margin-left:auto;
@@ -49,7 +50,7 @@ header{
 
 .about{
     display:flex;
-    color:#FFFFFF;
+    color:white;
     height:250px;
     padding-left:200px;
     padding-right:200px;
@@ -77,7 +78,7 @@ header{
     border:3px solid #3882F6;
     margin-top:10px;
     background-color:#3882F6;
-    color:#FFFFFF;
+    color:white;
     font-size:medium;
     font-weight:550;
     width:120px;
@@ -92,7 +93,7 @@ header{
 
 
 .randominfo{
-    background-color:#FFFFFF;
+    background-color:white;
     height:400px;
     padding-left:300px;
     padding-right:300px;
@@ -115,7 +116,7 @@ header{
     height:150px;
     border:5px solid #3882F6;
     border-radius: 10px;
-    color:#FFFFFF;
+    color:white;
     margin-left:10px;
     margin-right: 10px;
 }
@@ -124,15 +125,14 @@ header{
 
 .quotes{
     display:inline-block;
-    justify-content:space-between;
     background-color:#E5E7EB;
     padding-left:300px;
     padding-right:300px;
     padding-top:125px;
-    padding-bottom:125px;
+    padding-bottom: 50px;
 }
 .quote{
-    float-left;
+    float:left;
     font-family:myfont-light_italic;
     font-size:36px;
 }
@@ -140,4 +140,54 @@ header{
     float:right;
     font-family:myfont-bold;
     font-size:25px;
+}
+
+
+
+.signup{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    height:250px;
+    background-color:white;
+    padding-left:200px;
+    padding-right:200px;
+
+}
+.blue-signup-box{
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #3882F6;
+    color:white;
+    width:900px;
+    height:150px;
+    border-radius: 10px;
+}
+.cta-button{
+    border:3px solid white;
+    margin-top:10px;
+    background-color:#3882F6;
+    color:white;
+    font-size:medium;
+    font-weight:550;
+    width:120px;
+    height:35px;
+    border-radius:10px;
+    text-align: center;
+}
+.cta-button:hover{
+    transform:scale(1.1) perspective(1px);
+    background-color: #1f29372d;
+}
+
+
+
+footer{
+    font-size:20px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    height:100px;
+    color:#e5e7eb9c;
 }
